# Skull-Island

./: .gitignore  .gitmodules  LICENSE  README.md  build_ios_library.sh  install_and_setup.txt
.github/workflows/: build.yaml
SaplingMobile/: .babelrc  .eslintignore  .eslintrc  .eslintrc.json  config.xml  package-lock.json  package.json  webpack.config.dev.js  webpack.config.js
SaplingMobile/res/: network_security_config.xml
SaplingMobile/src/: App.js  App.jsx  index.js  types.js
SaplingMobile/src/actions/: Context.jsx  MainSubPage.jsx  Secrets.jsx  SendTo.jsx  Settings.jsx  StartupSubPage.jsx
SaplingMobile/src/components/: addressdropdown.jsx  balancegraph.jsx  button.jsx  chainsync.jsx  login.jsx  lowerbar.jsx  main.jsx  passphrase.jsx  privatekey.jsx  qr.jsx  receive.jsx  reindex.jsx  send.jsx  spinner.jsx  splash.jsx  transaction.jsx  transactionList.jsx  wallet.jsx  zaddressList.jsx  zmain.jsx
SaplingMobile/src/containers/: addressdropdown.jsx  balancegraph.jsx  chainsync.jsx  chaintapi.jsx  loader.jsx  lowerbar.jsx  passphrase.jsx  privatekey.jsx  qr.jsx  receive.jsx  reconnect.jsx  reindex.jsx  send.jsx  spinner.jsx  splash.jsx  tmain.jsx  ttransactionlist.jsx  zaddresslist.jsx  zmain.jsx  ztransaction.jsx  ztransactionlist.jsx
SaplingMobile/src/database/: sqlite.js
SaplingMobile/src/pagecomponents/: PirateLogin.jsx  PirateParams.jsx  PirateShared.jsx
SaplingMobile/src/pages/: loginpage.jsx  mainpage.jsx  setparamspage.jsx  setpasswordpage.jsx  setwalletpage.jsx
SaplingMobile/src/reducers/: Contacts.jsx  Context.jsx  MainSubPage.jsx  Secrets.jsx  SendTo.jsx  Settings.jsx  StartSubPage-delete.jsx  index.jsx
SaplingMobile/src/theme/: default.js
SaplingMobile/src/utils/: coins.js  fileops.js  firebase.js  hash.js  litewallet.js  params.js  persistentStorage.js  sapling.js  statusbar.js  version.js  wallet.js
SaplingMobile/www/: index.html
SaplingPlugin/: README.md  cargo-config.toml.template  create-ndk-standalone.sh  package.json  plugin.xml
SaplingPlugin/native/android/sapling-jni/: AndroidManifest.xml
SaplingPlugin/native/android/sapling-jni/src/com/rust/saplingjni/: SaplingJni.java
SaplingPlugin/native/rust/: Cargo.toml  README.md  build.sh  update_libs.sh
SaplingPlugin/native/rust/src/: address.rs  block.rs  lib.rs  sapling_rust.h  send.rs
SaplingPlugin/src/android/: Sapling.java  Sapling_backup.java
SaplingPlugin/src/ios/: HWPSapling.h  HWPSapling.m
SaplingPlugin/www/: sapling.js
options/: liteservers.json
