[package]
name = "sapling_rust_lib"
version = "0.1.0"
authors = ["cryptoforge <cryptoforge@gmail.com>"]
description = "Cordova Sapling plugin static library project built for iOS and Android"
publish = false

[lib]
name = "sapling_rust_lib"
crate_type = ["staticlib","cdylib"]


[dependencies]

zcash_client_backend = { git = "https://github.com/cryptoforge-alt/librustzcash.git", rev= "be134fbea344183fd8766e8c0a42e3ff10e0ad28" }
pairing = { git = "https://github.com/cryptoforge-alt/librustzcash.git", rev= "be134fbea344183fd8766e8c0a42e3ff10e0ad28" }
zcash_primitives = { git = "https://github.com/cryptoforge-alt/librustzcash.git", rev= "be134fbea344183fd8766e8c0a42e3ff10e0ad28", features = ["transparent-inputs"] }
ff = { git = "https://github.com/cryptoforge-alt/librustzcash.git", rev= "be134fbea344183fd8766e8c0a42e3ff10e0ad28" }
bellman = { git = "https://github.com/cryptoforge-alt/librustzcash.git", rev= "be134fbea344183fd8766e8c0a42e3ff10e0ad28" }
zcash_proofs = { git = "https://github.com/cryptoforge-alt/librustzcash.git", rev= "be134fbea344183fd8766e8c0a42e3ff10e0ad28" }

# bitcoin = { path = "../../../rust-bitcoin"}
# secp256k1 = "0.15"

tiny-bip39 = "0.6.2"
rand = "0.7.2"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hex = "0.3"
hex-serde = "0.1"




[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.9", default-features = false }
android_logger = "0.8.6"
log = "0.4.1"
